--- a/deno.json
+++ b/deno.json
@@ -37,7 +37,8 @@
     "twind-preset-autoprefix": "https://esm.sh/@twind/preset-autoprefix@1.0.7",
     "twind-preset-tailwind": "https://esm.sh/@twind/preset-tailwind@1.1.4",
     "$fresh/plugins/twind.ts": "https://deno.land/x/fresh_twindv1_plugin@v1.3.0/twind.ts",
-    "@fathym/atomic-icons": "https://deno.land/x/fathym_atomic_icons/mod.ts"
+    "@fathym/atomic-icons": "https://deno.land/x/fathym_atomic_icons@v0.0.3-integration25/mod.ts",
+    "$fathym/atomic-icons": "./build/iconset/icons/_exports.ts"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
