--- a/deno.json
+++ b/deno.json
@@ -43,7 +43,8 @@
     "@fathym/atomic-icons": "https://deno.land/x/fathym_atomic_icons@v0.0.3-integration25/mod.ts",
     "$fathym/atomic-icons": "./build/iconset/icons/_exports.ts",
     "$fresh_charts/mod.ts": "https://deno.land/x/fresh_charts@0.3.1/mod.ts",
-    "$fresh_charts/utils.ts": "https://deno.land/x/fresh_charts/utils.ts"
+    "$fresh_charts/utils.ts": "https://deno.land/x/fresh_charts@0.3.1/utils.ts",
+    "$fresh_charts/": "https://deno.land/x/fresh_charts@0.3.1/"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
