--- a/deno.json
+++ b/deno.json
@@ -44,7 +44,9 @@
     "$fathym/atomic-icons": "./build/iconset/icons/_exports.ts",
     "$fresh_charts/mod.ts": "https://deno.land/x/fresh_charts@0.3.1/mod.ts",
     "$fresh_charts/utils.ts": "https://deno.land/x/fresh_charts@0.3.1/utils.ts",
-    "$fresh_charts/": "https://deno.land/x/fresh_charts@0.3.1/"
+    "$fresh_charts/": "https://deno.land/x/fresh_charts@0.3.1/",
+    "@fresh_kv_oauth": "https://deno.land/x/deno_fresh_kv_oauth@v0.0.1-integration7/mod.ts",
+    "@kv_oauth": "https://deno.land/x/deno_kv_oauth@v0.2.7/mod.ts"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
