--- a/deno.jsonc
+++ b/deno.jsonc
@@ -39,10 +39,10 @@
     "twind-preset-tailwind/": "https://esm.sh/@twind/preset-tailwind@1.1.4/",
     "twind-preset-tailwind-forms": "https://esm.sh/@twind/preset-tailwind-forms@1.1.2",
     "$fresh/plugins/twind.ts": "https://deno.land/x/fresh_twindv1_plugin@v1.3.0/twind.ts",
-    "@fathym/atomic": "https://deno.land/x/fathym_atomic@v0.0.64-integration/mod.ts",
-    "@fathym/atomic-icons": "https://deno.land/x/fathym_atomic_icons@v0.0.3-integration33/mod.ts",
-    "@fathym/atomic-icons/browser": "https://deno.land/x/fathym_atomic_icons@v0.0.3-integration33/browser.ts",
+    "@fathym/atomic-icons": "https://deno.land/x/fathym_atomic_icons@v0.0.3-integration34/mod.ts",
+    "@fathym/atomic-icons/browser": "https://deno.land/x/fathym_atomic_icons@v0.0.3-integration34/browser.ts",
     "@fathym/synaptic": "https://deno.land/x/fathym_synaptic@v0.0.23-integration/mod.ts",
+    "@harbor/atomic": "https://deno.land/x/harbor_research_harbor_atomic@v0.0.17-integration/mod.ts",
     "$fathym/atomic-icons": "./build/iconset/icons/_exports.ts",
     "$fresh_charts/mod.ts": "https://deno.land/x/fresh_charts@0.3.1/mod.ts",
     "$fresh_charts/utils.ts": "https://deno.land/x/fresh_charts@0.3.1/utils.ts",
