--- a/deno.jsonc
+++ b/deno.jsonc
@@ -18,31 +18,32 @@
     "exclude": ["_fresh"]
   },
   "imports": {
-    "$fresh/": "https://deno.land/x/fresh@1.4.3/",
     "preact": "https://esm.sh/preact@10.16.0",
     "preact/": "https://esm.sh/preact@10.16.0/",
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
-    "twind": "https://esm.sh/@twind/core@1.1.3",
-    "twind/": "https://esm.sh/@twind/core@1.1.3/",
-    "$std/": "https://deno.land/std@0.198.0/",
-    "twind-preset-autoprefix": "https://esm.sh/@twind/preset-autoprefix@1.0.7",
-    "twind-preset-tailwind": "https://esm.sh/@twind/preset-tailwind@1.1.4",
-    "twind-preset-tailwind/": "https://esm.sh/@twind/preset-tailwind@1.1.4/",
-    "twind-preset-tailwind-forms": "https://esm.sh/@twind/preset-tailwind-forms@1.1.2",
-    "$fresh/plugins/twind.ts": "https://deno.land/x/fresh_twindv1_plugin@v1.3.0/twind.ts",
-    "@fathym/atomic-icons": "https://deno.land/x/fathym_atomic_icons@v0.0.3-integration34/mod.ts",
-    "@fathym/atomic-icons/browser": "https://deno.land/x/fathym_atomic_icons@v0.0.3-integration34/browser.ts",
+    "$std/": "https://deno.land/std@0.203.0/",
+    "@fathym/common": "https://deno.land/x/fathym_common@v0.0.99/mod.ts",
+    "@fathym/atomic-icons": "https://deno.land/x/fathym_atomic_icons@v0.0.5-integration/mod.ts",
+    "@fathym/atomic-icons/browser": "https://deno.land/x/fathym_atomic_icons@v0.0.5-integration/browser.ts",
     "@fathym/synaptic": "https://deno.land/x/fathym_synaptic@v0.0.23-integration/mod.ts",
-    "@harbor/atomic": "https://deno.land/x/harbor_research_harbor_atomic@v0.0.18-integration/mod.ts",
+    "@harbor/atomic": "https://deno.land/x/harbor_research_harbor_atomic@v0.0.21-integration/mod.ts",
     "$fathym/atomic-icons": "./build/iconset/icons/_exports.ts",
+    "$fresh/": "https://deno.land/x/fresh@1.4.3/",
+    "$fresh/plugins/twind.ts": "https://deno.land/x/fresh_twindv1_plugin@v1.3.0/twind.ts",
     "$fresh_charts/mod.ts": "https://deno.land/x/fresh_charts@0.3.1/mod.ts",
     "$fresh_charts/utils.ts": "https://deno.land/x/fresh_charts@0.3.1/utils.ts",
     "$fresh_charts/": "https://deno.land/x/fresh_charts@0.3.1/",
     "@fresh_kv_oauth": "https://deno.land/x/deno_fresh_kv_oauth@v0.0.1-integration7/mod.ts",
     "@kv_oauth": "https://deno.land/x/deno_kv_oauth@v0.2.7/mod.ts",
-    "$gfm": "https://deno.land/x/gfm@0.2.5/mod.ts"
+    "$gfm": "https://deno.land/x/gfm@0.2.5/mod.ts",
+    "twind": "https://esm.sh/@twind/core@1.1.3",
+    "twind/": "https://esm.sh/@twind/core@1.1.3/",
+    "twind-preset-autoprefix": "https://esm.sh/@twind/preset-autoprefix@1.0.7",
+    "twind-preset-tailwind": "https://esm.sh/@twind/preset-tailwind@1.1.4",
+    "twind-preset-tailwind/": "https://esm.sh/@twind/preset-tailwind@1.1.4/",
+    "twind-preset-tailwind-forms": "https://esm.sh/@twind/preset-tailwind-forms@1.1.2"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
