--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,8 @@ jobs:
 
       - name: Build step
         run: "deno task build" # 📝 Update the build command(s) if necessary
+        env:
+          OPENAI_API_KEY: ${{env.OPENAI_API_KEY}}
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
