--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           deno-version: v1.x
 
       - name: Build step
-        run: "deno task build" # 📝 Update the build command(s) if necessary
+        run: "deno task start" # 📝 Update the build command(s) if necessary
         env:
           OPENAI_API_KEY: ${{secrets.OPENAI_API_KEY}}
 
