--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,9 +24,7 @@ jobs:
           deno-version: v1.x
 
       - name: Build step
-        run: "deno task start" # 📝 Update the build command(s) if necessary
-        env:
-          OPENAI_API_KEY: ${{secrets.OPENAI_API_KEY}}
+        run: "deno task build" # 📝 Update the build command(s) if necessary
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
