--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           deno-version: v1.1.3
 
       - name: Build step
-        run: "deno task build" # 📝 Update the build command(s) if necessary
+        run: deno task build # 📝 Update the build command(s) if necessary
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
