--- a/deno.jsonc
+++ b/deno.jsonc
@@ -29,10 +29,10 @@
     "@fathym/atomic-icons/browser": "https://deno.land/x/fathym_atomic_icons@v0.0.7-integration/browser.ts",
     "_@fathym/synaptic": "../synaptic/mod.ts",
     "@fathym/synaptic": "https://deno.land/x/fathym_synaptic@v0.0.26-integration/mod.ts",
-    "_@harbor/atomic": "../../harbor-research/harbor-atomic/mod.ts",
-    "_@harbor/atomic/islands": "../../harbor-research/harbor-atomic/islands.ts",
-    "@harbor/atomic": "https://deno.land/x/harbor_research_harbor_atomic@v0.0.38-integration/mod.ts",
-    "@harbor/atomic/islands": "https://deno.land/x/harbor_research_harbor_atomic@v0.0.38-integration/islands.ts",
+    "@harbor/atomic": "../../harbor-research/harbor-atomic/mod.ts",
+    "@harbor/atomic/islands": "../../harbor-research/harbor-atomic/islands.ts",
+    "_@harbor/atomic": "https://deno.land/x/harbor_research_harbor_atomic@v0.0.38-integration/mod.ts",
+    "_@harbor/atomic/islands": "https://deno.land/x/harbor_research_harbor_atomic@v0.0.38-integration/islands.ts",
     "$fathym/atomic-icons": "./build/iconset/icons/_exports.ts",
     "$fresh/": "https://deno.land/x/fresh@1.4.3/",
     "$fresh/plugins/twind.ts": "https://deno.land/x/fresh_twindv1_plugin@v1.3.0/twind.ts",
@@ -41,7 +41,6 @@
     "$fresh_charts/": "https://deno.land/x/fresh_charts@0.3.1/",
     "@fresh_kv_oauth": "https://deno.land/x/deno_fresh_kv_oauth@v0.0.1-integration7/mod.ts",
     "@kv_oauth": "https://deno.land/x/deno_kv_oauth@v0.2.7/mod.ts",
-    "$gfm": "https://deno.land/x/gfm@0.2.5/mod.ts",
     "twind": "https://esm.sh/@twind/core@1.1.3",
     "twind/": "https://esm.sh/@twind/core@1.1.3/",
     "twind-preset-autoprefix": "https://esm.sh/@twind/preset-autoprefix@1.0.7",
