Reworked from portrayals and reports to pages and blocks

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -27,11 +27,11 @@
     "@fathym/common": "https://deno.land/x/fathym_common@v0.0.100-integration/mod.ts",
     "@fathym/atomic-icons": "https://deno.land/x/fathym_atomic_icons@v0.0.7-integration/mod.ts",
     "@fathym/atomic-icons/browser": "https://deno.land/x/fathym_atomic_icons@v0.0.7-integration/browser.ts",
-    "_@fathym/synaptic": "../synaptic/mod.ts",
-    "@fathym/synaptic": "https://deno.land/x/fathym_synaptic@v0.0.26-integration/mod.ts",
-    "_@harbor/atomic": "../../harbor-research/harbor-atomic/mod.ts",
+    "@fathym/synaptic": "../synaptic/mod.ts",
+    "_@fathym/synaptic": "https://deno.land/x/fathym_synaptic@v0.0.26-integration/mod.ts",
+    "@harbor/atomic": "../../harbor-research/harbor-atomic/mod.ts",
     "_@harbor/atomic/islands": "../../harbor-research/harbor-atomic/islands.ts",
-    "@harbor/atomic": "https://deno.land/x/harbor_research_harbor_atomic@v0.0.40-integration/mod.ts",
+    "_@harbor/atomic": "https://deno.land/x/harbor_research_harbor_atomic@v0.0.40-integration/mod.ts",
     "@harbor/atomic/islands": "https://deno.land/x/harbor_research_harbor_atomic@v0.0.40-integration/islands.ts",
     "$fathym/atomic-icons": "./build/iconset/icons/_exports.ts",
     "$fresh/": "https://deno.land/x/fresh@1.4.3/",
