--- a/deno.jsonc
+++ b/deno.jsonc
@@ -23,12 +23,11 @@
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
-    "$std/": "https://deno.land/std@0.203.0/",
     "@fathym/common": "https://deno.land/x/fathym_common@v0.0.100-integration/mod.ts",
     "@fathym/atomic-icons": "https://deno.land/x/fathym_atomic_icons@v0.0.7-integration/mod.ts",
     "@fathym/atomic-icons/browser": "https://deno.land/x/fathym_atomic_icons@v0.0.7-integration/browser.ts",
-    "@fathym/synaptic": "../synaptic/mod.ts",
-    "_@fathym/synaptic": "https://deno.land/x/fathym_synaptic@v0.0.26-integration/mod.ts",
+    "_@fathym/synaptic": "../synaptic/mod.ts",
+    "@fathym/synaptic": "https://deno.land/x/fathym_synaptic@v0.0.27-integration/mod.ts",
     "@harbor/atomic": "../../harbor-research/harbor-atomic/mod.ts",
     "_@harbor/atomic/islands": "../../harbor-research/harbor-atomic/islands.ts",
     "_@harbor/atomic": "https://deno.land/x/harbor_research_harbor_atomic@v0.0.40-integration/mod.ts",
@@ -41,6 +40,7 @@
     "$fresh_charts/": "https://deno.land/x/fresh_charts@0.3.1/",
     "@fresh_kv_oauth": "https://deno.land/x/deno_fresh_kv_oauth@v0.0.1-integration7/mod.ts",
     "@kv_oauth": "https://deno.land/x/deno_kv_oauth@v0.2.7/mod.ts",
+    "$std/": "https://deno.land/std@0.203.0/",
     "twind": "https://esm.sh/@twind/core@1.1.3",
     "twind/": "https://esm.sh/@twind/core@1.1.3/",
     "twind-preset-autoprefix": "https://esm.sh/@twind/preset-autoprefix@1.0.7",
