--- a/deno.jsonc
+++ b/deno.jsonc
@@ -18,28 +18,28 @@
     "exclude": ["_fresh"]
   },
   "imports": {
-    "preact": "https://esm.sh/preact@10.16.0",
-    "preact/": "https://esm.sh/preact@10.16.0/",
-    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
-    "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
-    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
-    "@fathym/common": "https://deno.land/x/fathym_common@v0.0.100-integration/mod.ts",
-    "@fathym/atomic-icons": "https://deno.land/x/fathym_atomic_icons@v0.0.7-integration/mod.ts",
-    "@fathym/atomic-icons/browser": "https://deno.land/x/fathym_atomic_icons@v0.0.7-integration/browser.ts",
+    "@fathym/common": "https://deno.land/x/fathym_common@v0.0.100/mod.ts",
+    "@fathym/atomic-icons": "https://deno.land/x/fathym_atomic_icons@v0.0.9/mod.ts",
+    "@fathym/atomic-icons/browser": "https://deno.land/x/fathym_atomic_icons@v0.0.9/browser.ts",
     "_@fathym/synaptic": "../synaptic/mod.ts",
-    "@fathym/synaptic": "https://deno.land/x/fathym_synaptic@v0.0.27-integration/mod.ts",
-    "_@harbor/atomic": "../../harbor-research/harbor-atomic/mod.ts",
-    "_@harbor/atomic/islands": "../../harbor-research/harbor-atomic/islands.ts",
-    "@harbor/atomic": "https://deno.land/x/harbor_research_harbor_atomic@v0.0.41-integration/mod.ts",
-    "@harbor/atomic/islands": "https://deno.land/x/harbor_research_harbor_atomic@v0.0.41-integration/islands.ts",
+    "@fathym/synaptic": "https://deno.land/x/fathym_synaptic@v0.0.28-integration/mod.ts",
     "$fathym/atomic-icons": "./build/iconset/icons/_exports.ts",
-    "$fresh/": "https://deno.land/x/fresh@1.4.3/",
+    "$fresh/": "https://deno.land/x/fresh@1.5.1/",
     "$fresh/plugins/twind.ts": "https://deno.land/x/fresh_twindv1_plugin@v1.3.0/twind.ts",
     "$fresh_charts/mod.ts": "https://deno.land/x/fresh_charts@0.3.1/mod.ts",
     "$fresh_charts/utils.ts": "https://deno.land/x/fresh_charts@0.3.1/utils.ts",
     "$fresh_charts/": "https://deno.land/x/fresh_charts@0.3.1/",
     "@fresh_kv_oauth": "https://deno.land/x/deno_fresh_kv_oauth@v0.0.1-integration7/mod.ts",
+    "_@harbor/atomic": "../../harbor-research/harbor-atomic/mod.ts",
+    "_@harbor/atomic/islands": "../../harbor-research/harbor-atomic/islands.ts",
+    "@harbor/atomic": "https://deno.land/x/harbor_research_harbor_atomic@v0.0.44-integration/mod.ts",
+    "@harbor/atomic/islands": "https://deno.land/x/harbor_research_harbor_atomic@v0.0.44-integration/islands.ts",
     "@kv_oauth": "https://deno.land/x/deno_kv_oauth@v0.2.7/mod.ts",
+    "preact": "https://esm.sh/preact@10.18.1",
+    "preact/": "https://esm.sh/preact@10.18.1/",
+    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.2",
+    "@preact/signals": "https://esm.sh/*@preact/signals@1.2.1",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.0",
     "$std/": "https://deno.land/std@0.203.0/",
     "twind": "https://esm.sh/@twind/core@1.1.3",
     "twind/": "https://esm.sh/@twind/core@1.1.3/",
