--- a/deno.jsonc
+++ b/deno.jsonc
@@ -40,6 +40,11 @@
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.2",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.1",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.0",
+    "react": "https://esm.sh/preact/compat",
+    "react-dom": "https://esm.sh/preact/compat",
+    "react/jsx-runtime": "https://esm.sh/preact/jsx-runtime",
+    "flowbite": "https://esm.sh/flowbite@1.8.1?external=react,react-dom,react%2Fjsx-runtime",
+    "flowbite-react": "https://esm.sh/flowbite-react@0.6.4?external=react,react-dom,react%2Fjsx-runtime",
     "$std/": "https://deno.land/std@0.203.0/",
     "twind": "https://esm.sh/@twind/core@1.1.3",
     "twind/": "https://esm.sh/@twind/core@1.1.3/",
