--- a/deno.jsonc
+++ b/deno.jsonc
@@ -45,6 +45,8 @@
     "react/jsx-runtime": "https://esm.sh/preact/jsx-runtime",
     "flowbite": "https://esm.sh/flowbite@1.8.1?external=react,react-dom,react%2Fjsx-runtime",
     "flowbite-react": "https://esm.sh/flowbite-react@0.6.4?external=react,react-dom,react%2Fjsx-runtime",
+    "react-icons": "https://esm.sh/react-icons@4.11.0?external=react,react-dom,react%2Fjsx-runtime",
+    "react-icons/md": "https://esm.sh/react-icons@4.11.0/md?external=react,react-dom,react%2Fjsx-runtime",
     "$std/": "https://deno.land/std@0.203.0/",
     "twind": "https://esm.sh/@twind/core@1.1.3",
     "twind/": "https://esm.sh/@twind/core@1.1.3/",
